# game_python_red_monster

./: .gitignore  README.md
.claude/: settings.json
game_mosta_v01/: constants.py  entities.py  hud.py  levels.py  main.py  sprites.py
game_mosta_v02/: constants.py  entities.py  hud.py  main.py  pyproject.toml  world.py
game_mosta_v02/tests/: test_entities.py  test_world.py
game_mosta_v03/: constants.py  editor.py  entities.py  hud.py  items.py  main.py  procgen.py  pyproject.toml  save.py  sprites.py  world.py
game_mosta_v03/tests/: conftest.py  test_boss.py  test_editor.py  test_entities.py  test_items.py  test_procgen.py  test_save.py  test_world.py
game_mosta_v04_terminal/: constants.py  engine.py  entities.py  game.py  pyproject.toml  renderer.py  save.py  sprite.py  world.py
game_mosta_v04_terminal/tests/: conftest.py  test_game.py
scripts/: save_chat_turn.py
