[project]
name = "game-mosta-v02"
version = "0.2.0"
description = "Red Monster – Journey of Mosta (learning Python codebase)"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
mosta = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
