[project]
name = "game-mosta-v04-terminal"
version = "0.4.0"
description = "Red Monster — terminal (curses) version, stdlib-only"
requires-python = ">=3.11"
# No runtime dependencies — uses only the Python standard library.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
